--- a/world/ruby-sus/PKGBUILD
+++ b/world/ruby-sus/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-sus
-pkgver=0.31.0
-pkgrel=1
+pkgver=0.32.0
+pkgrel=2
 pkgdesc='A fast and scalable test runner'
 arch=(any)
 url='https://github.com/socketry/sus'
@@ -16,7 +16,6 @@ makedepends=(
   ruby-rdoc
 )
 checkdepends=(
-  ruby-bake-modernize
   ruby-bake-test
   ruby-bake-test-external
   ruby-bundler
@@ -25,7 +24,8 @@ checkdepends=(
 )
 options=(!emptydirs)
 source=(git+https://github.com/socketry/sus.git#tag=v$pkgver)
-sha256sums=('62e0a0256ecc76d6b4df8e629ac06c9ba389455e9385e62cc1d3bca99ea9a6f6')
+sha512sums=('969e49824fc6e71c81171e7be372eb161dcf4c4a91066b42e62da51c30f6876810a6ddf1c2037689c1f98b47a4574081fb4d527fa6fa54e389a485cbc9e833ec')
+b2sums=('7f126e74c73a86c56bb6670852d9f0471ecb5a6d2661e6008194dbe400a37ee8d3aa7f8aaba931cc75439799a44b882b13c2e06153fcf6afcf17bec1b1054c65')
 
 prepare() {
   cd sus
@@ -35,9 +35,9 @@ prepare() {
     -e '/signing_key/d' \
     -i sus.gemspec
 
-  sed -i \
-    -e '/bake-gem/d;/utopia-project/d' \
-    -e '/rubocop/d' \
+  sed --in-place \
+    --expression '/group :maintenance/,/end/d' \
+    --expression '/rubocop/d' \
     gems.rb
 }
 
