--- a/world/ruby-test-unit/.artixlinux/pkgbase.yaml
+++ b/world/ruby-test-unit/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-test-unit
-  version: 3.6.7-1
+  version: 3.6.7-4
   arch:
     - any
   pkgname:
     - ruby-test-unit
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.6.7-1
+    version: 3.6.7-4
     packages:
-      - ruby-test-unit-3.6.7-1-any.pkg.tar.zst
+      - ruby-test-unit-3.6.7-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
