--- a/world/ruby-websocket-driver/PKGBUILD
+++ b/world/ruby-websocket-driver/PKGBUILD
@@ -4,7 +4,7 @@
 _gemname='websocket-driver'
 pkgname="ruby-${_gemname}"
 pkgver=0.7.6
-pkgrel=2
+pkgrel=4
 pkgdesc='WebSocket protocol handler with pluggable I/O'
 arch=('x86_64')
 url='https://github.com/faye/websocket-driver-ruby'
@@ -12,16 +12,18 @@ license=('Apache')
 options=(!emptydirs)
 depends=(
   ruby
+  ruby-base64
   ruby-websocket-extensions
 )
 makedepends=(
-  ruby-rake
-  ruby-rake-compiler
+  ruby-rdoc
 )
 checkdepends=(
   ruby-bundler
   ruby-eventmachine
   ruby-permessage_deflate
+  ruby-rake
+  ruby-rake-compiler
   ruby-rspec
 )
 source=("${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz")
@@ -38,28 +40,61 @@ prepare() {
 build() {
   cd "${_gemname}-ruby-${pkgver}"
 
-  rake gem
+  local _gemdir="$(gem env gemdir)"
+
+  gem build --verbose "${_gemname}.gemspec"
+
+  gem install \
+    --local \
+    --verbose \
+    --ignore-dependencies \
+    --no-user-install \
+    --install-dir "tmp_install${_gemdir}" \
+    --bindir "tmp_install/usr/bin" \
+    "${_gemname}-${pkgver}.gem"
+
+  # remove unreproducible files
+  rm --force --recursive --verbose \
+    "tmp_install${_gemdir}/cache/" \
+    "tmp_install${_gemdir}/gems/${_gemname}-${pkgver}/vendor/" \
+    "tmp_install${_gemdir}/doc/${_gemname}-${pkgver}/ri/ext/"
+
+  find "tmp_install${_gemdir}/gems/" \
+    -type f \
+    \( \
+      -iname "*.o" -o \
+      -iname "*.c" -o \
+      -iname "*.so" -o \
+      -iname "*.time" -o \
+      -iname "gem.build_complete" -o \
+      -iname "Makefile" \
+    \) \
+    -delete
+
+  find "tmp_install${_gemdir}/extensions/" \
+    -type f \
+    \( \
+      -iname "mkmf.log" -o \
+      -iname "gem_make.out" \
+    \) \
+    -delete
 }
 
 check() {
   cd "${_gemname}-ruby-${pkgver}"
 
-  rspec
+  local _gemdir="$(gem env gemdir)"
+
+  GEM_HOME="tmp_install${_gemdir}" rspec
 }
 
 package() {
   cd "${_gemname}-ruby-${pkgver}"
 
-  local _gemdir="$(gem env gemdir)"
-  local _platform="$(gem env platform | cut -d':' -f2)"
-  local _extension_api_version="$(ruby -e'puts Gem.extension_api_version')"
+  cp --archive --verbose tmp_install/* "${pkgdir}"
 
-  gem install --ignore-dependencies --no-user-install -i "${pkgdir}/${_gemdir}" -n "${pkgdir}/usr/bin" "pkg/${_gemname}-${pkgver}.gem"
-
-  rm "${pkgdir}/${_gemdir}/cache/${_gemname}-${pkgver}.gem" \
-      "${pkgdir}/${_gemdir}/gems/${_gemname}-${pkgver}/ext/websocket-driver/Makefile" \
-      "${pkgdir}/${_gemdir}/extensions/${_platform}/${_extension_api_version}/${_gemname}-${pkgver}/gem_make.out"
-  rm -rf "${pkgdir}/${_gemdir}/doc/${_gemname}-${pkgver}/ri/ext/"
-
-  install -Dm 644 CHANGELOG.md CODE_OF_CONDUCT.md README.md --target-directory "${pkgdir}/usr/share/doc/${pkgname}"
+  install --verbose -D --mode=0644 LICENSE* --target-directory "${pkgdir}/usr/share/licenses/${pkgname}"
+  install --verbose -D --mode=0644 *.md --target-directory "${pkgdir}/usr/share/doc/${pkgname}"
 }
+
+# vim: tabstop=2 shiftwidth=2 expandtab:
