--- a/world/puppet/.artixlinux/pkgbase.yaml
+++ b/world/puppet/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: puppet
-  version: 8.10.0-1
+  version: 8.10.0-3
   arch:
     - any
   pkgname:
     - puppet
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 8.10.0-1
+    version: 8.10.0-3
     packages:
-      - puppet-8.10.0-1-any.pkg.tar.zst
+      - puppet-8.10.0-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
