--- a/world/ruby-base64/.artixlinux/pkgbase.yaml
+++ b/world/ruby-base64/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: ruby-base64
-  version: 0.1.1-5
+  version: 0.2.0-1
   arch:
     - any
   pkgname:
     - ruby-base64
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.1-5
+    version: 0.2.0-1
     packages:
-      - ruby-base64-0.1.1-5-any.pkg.tar.zst
+      - ruby-base64-0.2.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
