--- a/world/ruby-bigdecimal/.artixlinux/pkgbase.yaml
+++ b/world/ruby-bigdecimal/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: ruby-bigdecimal
-  version: 3.1.2-5
+  version: 3.1.9-1
   arch:
-    - x86_64
+    - any
   pkgname:
     - ruby-bigdecimal
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.1.2-5
+    version: 3.1.9-1
     packages:
-      - ruby-bigdecimal-3.1.2-5-x86_64.pkg.tar.zst
+      - ruby-bigdecimal-3.1.9-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
