--- a/world/ruby-csv/.artixlinux/pkgbase.yaml
+++ b/world/ruby-csv/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: ruby-csv
-  version: 3.2.5-5
+  version: 3.3.2-1
   arch:
     - any
   pkgname:
     - ruby-csv
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.2.5-5
+    version: 3.3.2-1
     packages:
-      - ruby-csv-3.2.5-5-any.pkg.tar.zst
+      - ruby-csv-3.3.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
