--- a/world/ruby-drb/.artixlinux/pkgbase.yaml
+++ b/world/ruby-drb/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: ruby-drb
-  version: 2.1.0-6
+  version: 2.2.1-1
   arch:
     - any
   pkgname:
     - ruby-drb
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.1.0-6
+    version: 2.2.1-1
     packages:
-      - ruby-drb-2.1.0-6-any.pkg.tar.zst
+      - ruby-drb-2.2.1-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
