--- a/world/ruby-mutex_m/.artixlinux/pkgbase.yaml
+++ b/world/ruby-mutex_m/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: ruby-mutex_m
-  version: 0.1.1-4
+  version: 0.3.0-2
   arch:
     - any
   pkgname:
     - ruby-mutex_m
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.1-4
+    version: 0.3.0-2
     packages:
-      - ruby-mutex_m-0.1.1-4-any.pkg.tar.zst
+      - ruby-mutex_m-0.3.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
