--- a/world/papers/.artixlinux/pkgbase.yaml
+++ b/world/papers/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: papers
-  version: 48.1-1
+  version: 48.2-1
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - papers-lib-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,10 +33,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.1-1
+    version: 48.2-1
     packages:
-      - papers-48.1-1-x86_64.pkg.tar.zst
-      - papers-lib-docs-48.1-1-x86_64.pkg.tar.zst
+      - papers-48.2-1-x86_64.pkg.tar.zst
+      - papers-lib-docs-48.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
